Adding documentation and rearranging examples

--- a/examples/1_orientation_classification/deepdive_examples/uptrain_concept_drift.ipynb
+++ b/examples/1_orientation_classification/deepdive_examples/uptrain_concept_drift.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "In this notebook, we will see how we can use UpTrain package to check for data integrity, both on input data as well as custom metrics"
+    "In this notebook, we will see how we can use UpTrain package to identify concept drift ie degradation in model's performance. We will use DDM (Drift Detection Method) for the same."
    ]
   },
   {
@@ -22,11 +22,7 @@
     "import sys\n",
     "sys.path.insert(0,'..')\n",
     "\n",
-    "from model_files import input_to_dataset_transformation, read_json, write_json, KpsDataset\n",
-    "from model_files import body_length_signal\n",
-    "\n",
-    "import joblib\n",
-    "import json\n",
+    "from helper_files import read_json, write_json, KpsDataset\n",
     "import torch"
    ]
   },
@@ -34,7 +30,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Download dataset from remote"
+    "Let's first download the dataset from remote and define the testing and annotation files"
    ]
   },
   {
@@ -43,7 +39,17 @@
    "metadata": {
     "tags": []
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Successfully installed wget\n",
+      "Data downloaded\n",
+      "Prepared Example Dataset\n"
+     ]
+    }
+   ],
    "source": [
     "data_dir = \"data\"\n",
     "remote_url = \"https://oodles-dev-training-data.s3.amazonaws.com/data.zip\"\n",
@@ -71,17 +77,11 @@
     "        os.remove(\"data.zip\")\n",
     "    except Exception as e:\n",
     "        print(e)\n",
-    "        print(\"Could not load training data\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 3,
-   "metadata": {},
-   "outputs": [],
-   "source": [
+    "        print(\"Could not load training data\")\n",
+    "\n",
     "real_world_test_cases = 'data/real_world_testing_data.json'\n",
     "golden_testing_file = 'data/golden_testing_data.json'\n",
+    "annotation_args = {'master_file': 'data/master_annotation_data.json'}\n",
     "\n",
     "inference_batch_size = 16"
    ]
@@ -95,7 +95,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -103,12 +103,22 @@
      "output_type": "stream",
      "text": [
       "Training on:  data/training_data.json  which has  1000  data-points\n",
-      "Trained model exists. Skipping training again.\n"
+      "Epoch 0: Loss 6.170424439734028\n",
+      "Epoch 1: Loss 1.804898705902639\n",
+      "Epoch 2: Loss 1.1475218022891212\n",
+      "Epoch 3: Loss 1.1139714462892492\n",
+      "Epoch 4: Loss 0.7651904336334047\n",
+      "Epoch 5: Loss 0.3935121600208127\n",
+      "Epoch 6: Loss 0.40462788252539983\n",
+      "Epoch 7: Loss 0.38329376321783504\n",
+      "Epoch 8: Loss 0.44259468588855605\n",
+      "Epoch 9: Loss 0.3619024118390551\n",
+      "Model saved at:  trained_models_torch/version_0\n"
      ]
     }
    ],
    "source": [
-    "from model_files import get_accuracy_torch, train_model_torch, BinaryClassification\n",
+    "from helper_files import get_accuracy_torch, train_model_torch, BinaryClassification\n",
     "train_model_torch('data/training_data.json', 'version_0')"
    ]
   },
@@ -116,12 +126,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Next, we get the model accuracy on testing dataset, which is again low due to misclassification of Pushup signals."
+    "Next, we get the model accuracy on testing dataset"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -134,10 +144,10 @@
     {
      "data": {
       "text/plain": [
-       "0.9184412942597419"
+       "0.9092873943169538"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -150,55 +160,49 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Let's define the UpTrain config to check data integrity. We have defined two checks:\n",
-    "\n",
-    "1. Check if the input features are not null. \n",
-    "\n",
-    "2. Check if body length (a custom defined metric) is greater than 50"
+    "Let's define the UpTrain config to detect Concept drift and use DDM as the algorithm for the same"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "cfg = {\n",
+    "    \"checks\": [{\n",
+    "        'type': uptrain.Anomaly.CONCEPT_DRIFT,\n",
+    "        'algorithm': uptrain.DataDriftAlgo.DDM\n",
+    "    }],\n",
+    "    \"data_identifier\": \"id\",\n",
+    "    \"tb_logging\": True,\n",
+    "    \"retraining_folder\": \"uptrain_smart_data_data_integrity\",\n",
+    "}"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 6,
    "metadata": {},
-   "outputs": [],
-   "source": [
-    "cfg = {\n",
-    "    \"checks\": [{\n",
-    "        'type': uptrain.Anomaly.DATA_INTEGRITY,\n",
-    "        'measurable_args': {\n",
-    "            'type': uptrain.MeasurableType.INPUT_FEATURE,\n",
-    "            'feature_name': 'kps'\n",
-    "        },\n",
-    "        'integrity_type': 'non_null'\n",
-    "    },\n",
-    "    {\n",
-    "        'type': uptrain.Anomaly.DATA_INTEGRITY,\n",
-    "        'measurable_args': {\n",
-    "            'type': uptrain.MeasurableType.CUSTOM,\n",
-    "            'signal_formulae': uptrain.Signal(\"body_length\", body_length_signal),\n",
-    "        },\n",
-    "        \"integrity_type\": \"greater_than\",\n",
-    "        \"threshold\": 50\n",
-    "    },\n",
-    "    ],\n",
-    "    \"data_identifier\": \"id\",\n",
-    "    \"training_args\": {\n",
-    "        \"fold_name\": \"uptrain_smart_data__data_integrity\",\n",
-    "    }\n",
-    "}"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 7,
-   "metadata": {},
    "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "NOTE: Using experimental fast data loading logic. To disable, pass\n",
+      "    \"--load_fast=false\" and report issues on GitHub. More details:\n",
+      "    https://github.com/tensorflow/tensorboard/issues/4784\n",
+      "\n",
+      "Serving TensorBoard on localhost; to expose to the network, use a proxy or pass --bind_all\n",
+      "TensorBoard 2.9.0 at http://localhost:6009/ (Press CTRL+C to quit)\n"
+     ]
+    },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Deleting the folder:  uptrain_logs\n"
+      "Drift detected with DDM at time:  11030\n"
      ]
     }
    ],
@@ -214,6 +218,9 @@
     "model.load_state_dict(torch.load(model_dir + model_save_name))\n",
     "model.eval()\n",
     "\n",
+    "gt_data = read_json(annotation_args['master_file'])\n",
+    "all_gt_ids = [x['id'] for x in gt_data]\n",
+    "\n",
     "for i,elem in enumerate(real_world_dataset):\n",
     "\n",
     "    # Do model prediction\n",
@@ -221,29 +228,11 @@
     "    x_test = torch.tensor(inputs[\"data\"][\"kps\"]).type(torch.float)\n",
     "    test_logits = model(x_test).squeeze() \n",
     "    preds = torch.round(torch.sigmoid(test_logits)).detach().numpy()\n",
+    "    idens = framework_torch.log(inputs=inputs, outputs=preds)\n",
     "\n",
-    "    # Log model inputs and outputs to the uptrain Framework to monitor data integrity\n",
-    "    idens = framework_torch.log(inputs=inputs, outputs=preds)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 8,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "TensorFlow installation not found - running with reduced feature set.\n",
-      "Serving TensorBoard on localhost; to expose to the network, use a proxy or pass --bind_all\n",
-      "TensorBoard 2.11.0 at http://localhost:6006/ (Press CTRL+C to quit)\n",
-      "^C\n"
-     ]
-    }
-   ],
-   "source": [
-    "!tensorboard --logdir uptrain_logs"
+    "    # Attach ground truth for accuracy evaluation\n",
+    "    this_elem_gt = [gt_data[all_gt_ids.index(x)]['gt'] for x in elem[0]['id']]\n",
+    "    framework_torch.log(identifiers=idens, gts=this_elem_gt)"
    ]
   }
  ],
@@ -263,7 +252,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.8"
+   "version": "3.10.4"
   },
   "vscode": {
    "interpreter": {
