--- a/examples/1_orientation_classification/deepdive_examples/uptrain_data_integrity.ipynb
+++ b/examples/1_orientation_classification/deepdive_examples/uptrain_data_integrity.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "In this notebook, we will see how we can use UpTrain package to identify data drift and identify out of distribution cases for the same orientation classification example."
+    "In this notebook, we will see how we can use UpTrain package to check for data integrity, both on input data as well as custom metrics"
    ]
   },
   {
@@ -22,11 +22,9 @@
     "import sys\n",
     "sys.path.insert(0,'..')\n",
     "\n",
-    "from model_files import input_to_dataset_transformation, read_json, write_json, KpsDataset\n",
-    "from model_files import body_length_signal, plot_all_cluster\n",
+    "from helper_files import read_json, write_json, KpsDataset\n",
+    "from helper_files import body_length_signal\n",
     "\n",
-    "import joblib\n",
-    "import json\n",
     "import torch"
    ]
   },
@@ -82,7 +80,6 @@
    "source": [
     "real_world_test_cases = 'data/real_world_testing_data.json'\n",
     "golden_testing_file = 'data/golden_testing_data.json'\n",
-    "annotation_args = {'master_file': 'data/master_annotation_data.json'}\n",
     "\n",
     "inference_batch_size = 16"
    ]
@@ -109,7 +106,7 @@
     }
    ],
    "source": [
-    "from model_files import get_accuracy_torch, train_model_torch, BinaryClassification\n",
+    "from helper_files import get_accuracy_torch, train_model_torch, BinaryClassification\n",
     "train_model_torch('data/training_data.json', 'version_0')"
    ]
   },
@@ -117,7 +114,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Next, we get the model accuracy on testing dataset"
+    "Next, we get the model accuracy on testing dataset, which is again low due to misclassification of Pushup signals."
    ]
   },
   {
@@ -135,7 +132,7 @@
     {
      "data": {
       "text/plain": [
-       "0.9184412942597419"
+       "0.9092873943169538"
       ]
      },
      "execution_count": 5,
@@ -151,13 +148,11 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Let's define the UpTrain config to identify data drifts. We define 3 checks here:\n",
+    "Let's define the UpTrain config to check data integrity. We have defined two checks:\n",
     "\n",
-    "1. Data Drift for input features - keypoints: Keypoints is a 34-dimensional vector (x,y for 17 body joints). We will use Embedding based clustering to calculate Earth Moving Distance to identify if we see data distributions very different from the reference dataset (ie original training file). Additionally, it also collects the edge datapoints.\n",
+    "1. Check if the input features are not null. \n",
     "\n",
-    "2. Data Drift for only the first feature - X co-ordinate of the Head keypoint. In addition to the overall input, we also want to see specific features in the input are drifting or not. To specify the same, we defined a complex measurable to extract scalar from the input keypoints embeddings.\n",
-    "\n",
-    "3. Data Drift for Body Length: Many of the times, functions on the input features might be more meaningful to look as compared to the raw features. In this case, we can use the location of the keypoints to determine body length of the user using the UpTrain Signals and monitor if we see any shifts in it's distribution."
+    "2. Check if body length (a custom defined metric) is greater than 50"
    ]
   },
   {
@@ -168,57 +163,24 @@
    "source": [
     "cfg = {\n",
     "    \"checks\": [{\n",
-    "        'type': uptrain.Anomaly.DATA_DRIFT,\n",
-    "        'reference_dataset': orig_training_file,\n",
-    "        'is_embedding': True,\n",
-    "        'cluster_plot_func': plot_all_cluster,\n",
-    "    },\n",
-    "    {\n",
-    "        'type': uptrain.Anomaly.DATA_DRIFT,\n",
-    "        'reference_dataset': orig_training_file,\n",
-    "        \"save_edge_cases\": False,\n",
-    "        \"measurable_args\": {\n",
-    "            'type': uptrain.MeasurableType.SCALAR_FROM_EMBEDDING,\n",
-    "            'idx': 0,\n",
-    "            'extract_from': {\n",
-    "                'type': uptrain.MeasurableType.INPUT_FEATURE,\n",
-    "                'feature_name': 'kps'\n",
-    "            }\n",
+    "        'type': uptrain.Anomaly.DATA_INTEGRITY,\n",
+    "        'measurable_args': {\n",
+    "            'type': uptrain.MeasurableType.INPUT_FEATURE,\n",
+    "            'feature_name': 'kps'\n",
     "        },\n",
+    "        'integrity_type': 'non_null'\n",
     "    },\n",
     "    {\n",
-    "        'type': uptrain.Anomaly.DATA_DRIFT,\n",
-    "        'reference_dataset': orig_training_file,\n",
-    "        'is_embedding': False,\n",
-    "        \"save_edge_cases\": False,\n",
-    "        \"measurable_args\": {\n",
+    "        'type': uptrain.Anomaly.DATA_INTEGRITY,\n",
+    "        'measurable_args': {\n",
     "            'type': uptrain.MeasurableType.CUSTOM,\n",
-    "            'signal_formulae': uptrain.Signal(\"Body Length\", body_length_signal),\n",
-    "        }\n",
-    "    }],\n",
-    "    \"data_identifier\": \"id\",\n",
-    "    \"feat_name_list\": [\"kps\"],\n",
-    "\n",
-    "    # Connect training pipeline to annotate data and retrain the model\n",
-    "    \"training_args\": {\n",
-    "        \"data_transformation_func\": input_to_dataset_transformation,  \n",
-    "        \"annotation_method\": {\"method\": uptrain.AnnotationMethod.MASTER_FILE, \"args\": annotation_args}, \n",
-    "        \"training_func\": train_model_torch, \n",
-    "        \"fold_name\": \"uptrain_smart_data__data_drift\",\n",
-    "        \"orig_training_file\": orig_training_file,\n",
-    "        \"cluster_plot_func\": plot_all_cluster\n",
-    "    },\n",
-    "\n",
-    "    # Retrain once 250 edge cases are collected\n",
-    "    \"retrain_after\": 100,\n",
-    "\n",
-    "    # Connect evaluation pipeline to test retrained model against original model\n",
-    "    \"evaluation_args\": {\n",
-    "        \"inference_func\": get_accuracy_torch,\n",
-    "        \"golden_testing_dataset\": golden_testing_file,\n",
-    "        \"metrics_to_check\": ['accuracy']\n",
-    "    }\n",
-    "\n",
+    "            'signal_formulae': uptrain.Signal(\"body_length\", body_length_signal),\n",
+    "        },\n",
+    "        \"integrity_type\": \"greater_than\",\n",
+    "        \"threshold\": 50\n",
+    "    },],\n",
+    "    \"retraining_folder\": \"uptrain_smart_data_data_integrity\",\n",
+    "    \"tb_logging\": True\n",
     "}"
    ]
   },
@@ -232,6 +194,19 @@
      "output_type": "stream",
      "text": [
       "Deleting the folder:  uptrain_logs\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "NOTE: Using experimental fast data loading logic. To disable, pass\n",
+      "    \"--load_fast=false\" and report issues on GitHub. More details:\n",
+      "    https://github.com/tensorflow/tensorboard/issues/4784\n",
+      "\n",
+      "Serving TensorBoard on localhost; to expose to the network, use a proxy or pass --bind_all\n",
+      "TensorBoard 2.9.0 at http://localhost:6008/ (Press CTRL+C to quit)\n"
      ]
     }
    ],
@@ -255,32 +230,8 @@
     "    test_logits = model(x_test).squeeze() \n",
     "    preds = torch.round(torch.sigmoid(test_logits)).detach().numpy()\n",
     "\n",
-    "    # Log model inputs and outputs to the uptrain Framework to monitor data drift\n",
-    "    idens = framework_torch.log(inputs=inputs, outputs=preds)\n",
-    "\n",
-    "    # Retrain only once\n",
-    "    if framework_torch.version > 1:\n",
-    "        break"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 8,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "TensorFlow installation not found - running with reduced feature set.\n",
-      "Serving TensorBoard on localhost; to expose to the network, use a proxy or pass --bind_all\n",
-      "TensorBoard 2.11.0 at http://localhost:6006/ (Press CTRL+C to quit)\n",
-      "^C\n"
-     ]
-    }
-   ],
-   "source": [
-    "!tensorboard --logdir uptrain_logs"
+    "    # Log model inputs and outputs to the uptrain Framework to monitor data integrity\n",
+    "    idens = framework_torch.log(inputs=inputs, outputs=preds)"
    ]
   }
  ],
@@ -300,7 +251,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.8"
+   "version": "3.10.4"
   },
   "vscode": {
    "interpreter": {
