--- a/examples/3_shopping_cart_rec/uptrain_recommendation_bias.ipynb
+++ b/examples/3_shopping_cart_rec/uptrain_recommendation_bias.ipynb
@@ -102,7 +102,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 9,
    "id": "aa9b0a94-6167-4276-aa17-e50b3a6b17bc",
    "metadata": {},
    "outputs": [],
@@ -167,16 +167,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 10,
    "id": "4236132b-8639-4401-b100-2d42d6ab6a28",
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
+     "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Deleting the folder:  oodles_smart_data\n",
-      "Deleting the folder:  oodles_logs\n"
+      "\n",
+      "NOTE: Using experimental fast data loading logic. To disable, pass\n",
+      "    \"--load_fast=false\" and report issues on GitHub. More details:\n",
+      "    https://github.com/tensorflow/tensorboard/issues/4784\n",
+      "\n",
+      "Serving TensorBoard on localhost; to expose to the network, use a proxy or pass --bind_all\n",
+      "TensorBoard 2.9.0 at http://localhost:6011/ (Press CTRL+C to quit)\n"
      ]
     }
    ],
@@ -204,10 +209,8 @@
     "            'need_gt': True,\n",
     "            'dashboard_name': 'price_homogeneity'\n",
     "    }], \n",
-    "    \"training_args\": {\n",
-    "        \"fold_name\": 'uptrain_smart_data', \n",
-    "        \"log_folder\": \"uptrain_logs\",\n",
-    "    }\n",
+    "    \"retraining_folder\": 'uptrain_smart_data', \n",
+    "    \"tb_logging\": True,\n",
     "}\n",
     "\n",
     "framework = uptrain.Framework(cfg)"
@@ -215,7 +218,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 11,
    "id": "27f9dccc-2710-4253-a98b-4b390378cc85",
    "metadata": {},
    "outputs": [],
@@ -332,7 +335,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.8"
+   "version": "3.10.4"
   }
  },
  "nbformat": 4,
