Removing dependencies in setup.py

--- a/examples/3_shopping_cart_rec/uptrain_recommendation_bias.ipynb
+++ b/examples/3_shopping_cart_rec/uptrain_recommendation_bias.ipynb
@@ -1,6 +1,22 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "id": "5e055692-ec8f-407b-a467-9a6e892e49ab",
+   "metadata": {},
+   "source": [
+    "## Monitoring Shopping Cart Recommendations"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "4865631a-4418-4b9e-995d-56988f4a4af8",
+   "metadata": {},
+   "source": [
+    "Note: Requires reclist (https://reclist.io/) to be installed. We ran the following code successfully with reclist version 0.3.1."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 1,
    "id": "5d7da2b0-6a3f-4fe9-aed8-461eae7fd3e5",
@@ -335,7 +351,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.4"
+   "version": "3.8.16"
   }
  },
  "nbformat": 4,
