Reducing uptrain package requirements and improving streamlit designs

--- a/examples/1_orientation_classification/get_started.ipynb
+++ b/examples/1_orientation_classification/get_started.ipynb
@@ -4,7 +4,18 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Refining a binary blassification model by identifying data distribution shifts"
+    "<h1 align=\"center\">\n",
+    "  <a href=\"https://uptrain.ai\">\n",
+    "    <img width=\"300\" src=\"https://user-images.githubusercontent.com/108270398/214240695-4f958b76-c993-4ddd-8de6-8668f4d0da84.png\" alt=\"uptrain\">\n",
+    "  </a>\n",
+    "</h1>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<h1 style=\"text-align: center;\">Retraining a Binary Classification Model by Identifying Data Drifts</h1>"
    ]
   },
   {
@@ -41,8 +52,24 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Install the required packages for this example"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 1,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "!pip install torch imgaug"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -66,7 +93,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {
     "tags": []
    },
@@ -128,7 +155,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -153,7 +180,6 @@
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
        "      <th>id</th>\n",
-       "      <th>kps</th>\n",
        "      <th>gt</th>\n",
        "      <th>Nose_X</th>\n",
        "      <th>Nose_Y</th>\n",
@@ -162,6 +188,7 @@
        "      <th>Right_Eye_X</th>\n",
        "      <th>Right_Eye_Y</th>\n",
        "      <th>Left_Ear_X</th>\n",
+       "      <th>Left_Ear_Y</th>\n",
        "      <th>...</th>\n",
        "      <th>Right_Hip_X</th>\n",
        "      <th>Right_Hip_Y</th>\n",
@@ -178,169 +205,162 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>12002202098</td>\n",
-       "      <td>[536.8321981494795, 175.195561665862, 275.1838...</td>\n",
-       "      <td>1</td>\n",
-       "      <td>536.832198</td>\n",
-       "      <td>175.195562</td>\n",
-       "      <td>275.183835</td>\n",
-       "      <td>299.200492</td>\n",
-       "      <td>321.438219</td>\n",
-       "      <td>53.586762</td>\n",
-       "      <td>438.831630</td>\n",
+       "      <td>18100306191</td>\n",
+       "      <td>0</td>\n",
+       "      <td>333.109946</td>\n",
+       "      <td>76.161688</td>\n",
+       "      <td>338.565022</td>\n",
+       "      <td>71.526141</td>\n",
+       "      <td>328.198963</td>\n",
+       "      <td>72.194832</td>\n",
+       "      <td>345.656490</td>\n",
+       "      <td>77.592943</td>\n",
        "      <td>...</td>\n",
-       "      <td>355.320493</td>\n",
-       "      <td>352.771307</td>\n",
-       "      <td>282.603256</td>\n",
-       "      <td>245.372110</td>\n",
-       "      <td>-71.727270</td>\n",
-       "      <td>148.854694</td>\n",
-       "      <td>377.204408</td>\n",
-       "      <td>118.812093</td>\n",
-       "      <td>368.630415</td>\n",
-       "      <td>32.683708</td>\n",
+       "      <td>313.925120</td>\n",
+       "      <td>186.053571</td>\n",
+       "      <td>335.013894</td>\n",
+       "      <td>253.606162</td>\n",
+       "      <td>309.011228</td>\n",
+       "      <td>249.226721</td>\n",
+       "      <td>333.654654</td>\n",
+       "      <td>311.513965</td>\n",
+       "      <td>311.760718</td>\n",
+       "      <td>294.100708</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
-       "      <td>11004300163</td>\n",
-       "      <td>[127.29942679103571, 213.30461544594243, 120.0...</td>\n",
+       "      <td>12100004003</td>\n",
        "      <td>1</td>\n",
-       "      <td>127.299427</td>\n",
-       "      <td>213.304615</td>\n",
-       "      <td>120.006179</td>\n",
-       "      <td>213.098156</td>\n",
-       "      <td>119.749502</td>\n",
-       "      <td>220.877945</td>\n",
-       "      <td>123.240242</td>\n",
+       "      <td>373.043835</td>\n",
+       "      <td>207.934236</td>\n",
+       "      <td>378.278397</td>\n",
+       "      <td>205.678759</td>\n",
+       "      <td>373.341256</td>\n",
+       "      <td>206.135385</td>\n",
+       "      <td>380.165081</td>\n",
+       "      <td>206.596348</td>\n",
        "      <td>...</td>\n",
-       "      <td>282.739062</td>\n",
-       "      <td>217.173672</td>\n",
-       "      <td>331.887746</td>\n",
-       "      <td>122.399542</td>\n",
-       "      <td>369.934428</td>\n",
-       "      <td>153.331971</td>\n",
-       "      <td>407.764187</td>\n",
-       "      <td>54.115847</td>\n",
-       "      <td>373.738996</td>\n",
-       "      <td>228.353284</td>\n",
+       "      <td>326.157557</td>\n",
+       "      <td>227.332505</td>\n",
+       "      <td>351.341468</td>\n",
+       "      <td>228.657224</td>\n",
+       "      <td>328.581103</td>\n",
+       "      <td>226.218648</td>\n",
+       "      <td>340.983916</td>\n",
+       "      <td>240.702033</td>\n",
+       "      <td>327.240044</td>\n",
+       "      <td>241.339998</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
-       "      <td>18100208242</td>\n",
-       "      <td>[342.73580897101715, 75.17388381608505, 347.63...</td>\n",
+       "      <td>17100400995</td>\n",
        "      <td>0</td>\n",
-       "      <td>342.735809</td>\n",
-       "      <td>75.173884</td>\n",
-       "      <td>347.639763</td>\n",
-       "      <td>69.066162</td>\n",
-       "      <td>337.646757</td>\n",
-       "      <td>69.463328</td>\n",
-       "      <td>354.332650</td>\n",
+       "      <td>289.116021</td>\n",
+       "      <td>218.502992</td>\n",
+       "      <td>294.331203</td>\n",
+       "      <td>212.576996</td>\n",
+       "      <td>284.066039</td>\n",
+       "      <td>212.259060</td>\n",
+       "      <td>301.216267</td>\n",
+       "      <td>211.233983</td>\n",
        "      <td>...</td>\n",
-       "      <td>327.693125</td>\n",
-       "      <td>175.678139</td>\n",
-       "      <td>373.687116</td>\n",
-       "      <td>236.403840</td>\n",
-       "      <td>330.044019</td>\n",
-       "      <td>238.719585</td>\n",
-       "      <td>383.867725</td>\n",
-       "      <td>289.895923</td>\n",
-       "      <td>335.013380</td>\n",
-       "      <td>292.018822</td>\n",
+       "      <td>276.756049</td>\n",
+       "      <td>255.008508</td>\n",
+       "      <td>345.230291</td>\n",
+       "      <td>273.285718</td>\n",
+       "      <td>237.498075</td>\n",
+       "      <td>272.014232</td>\n",
+       "      <td>349.413545</td>\n",
+       "      <td>315.731031</td>\n",
+       "      <td>237.181977</td>\n",
+       "      <td>317.784665</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
-       "      <td>18100204340</td>\n",
-       "      <td>[335.26241877568896, 161.52584197965697, 340.3...</td>\n",
+       "      <td>18100102279</td>\n",
        "      <td>0</td>\n",
-       "      <td>335.262419</td>\n",
-       "      <td>161.525842</td>\n",
-       "      <td>340.358734</td>\n",
-       "      <td>155.666068</td>\n",
-       "      <td>329.570863</td>\n",
-       "      <td>154.843509</td>\n",
-       "      <td>347.034712</td>\n",
+       "      <td>320.897998</td>\n",
+       "      <td>71.873468</td>\n",
+       "      <td>325.167727</td>\n",
+       "      <td>67.468033</td>\n",
+       "      <td>317.188621</td>\n",
+       "      <td>67.689969</td>\n",
+       "      <td>329.814255</td>\n",
+       "      <td>69.942939</td>\n",
        "      <td>...</td>\n",
-       "      <td>316.727216</td>\n",
-       "      <td>218.696415</td>\n",
-       "      <td>375.741803</td>\n",
-       "      <td>250.993843</td>\n",
-       "      <td>285.306140</td>\n",
-       "      <td>252.504808</td>\n",
-       "      <td>384.364024</td>\n",
-       "      <td>298.382275</td>\n",
-       "      <td>275.523553</td>\n",
-       "      <td>298.044853</td>\n",
+       "      <td>297.857163</td>\n",
+       "      <td>154.614716</td>\n",
+       "      <td>329.598707</td>\n",
+       "      <td>197.955873</td>\n",
+       "      <td>299.710591</td>\n",
+       "      <td>203.663761</td>\n",
+       "      <td>327.663990</td>\n",
+       "      <td>231.684086</td>\n",
+       "      <td>298.525798</td>\n",
+       "      <td>251.789836</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
-       "      <td>12100104261</td>\n",
-       "      <td>[255.48815989533517, 62.44247796682604, 256.76...</td>\n",
-       "      <td>0</td>\n",
-       "      <td>255.488160</td>\n",
-       "      <td>62.442478</td>\n",
-       "      <td>256.765451</td>\n",
-       "      <td>58.603055</td>\n",
-       "      <td>251.489867</td>\n",
-       "      <td>58.323107</td>\n",
-       "      <td>255.327531</td>\n",
+       "      <td>12100500969</td>\n",
+       "      <td>1</td>\n",
+       "      <td>486.122761</td>\n",
+       "      <td>218.363896</td>\n",
+       "      <td>495.503172</td>\n",
+       "      <td>225.783665</td>\n",
+       "      <td>493.671955</td>\n",
+       "      <td>223.923930</td>\n",
+       "      <td>495.000279</td>\n",
+       "      <td>250.292959</td>\n",
        "      <td>...</td>\n",
-       "      <td>235.763698</td>\n",
-       "      <td>136.902009</td>\n",
-       "      <td>277.832912</td>\n",
-       "      <td>177.679435</td>\n",
-       "      <td>229.566259</td>\n",
-       "      <td>191.052507</td>\n",
-       "      <td>284.397434</td>\n",
-       "      <td>213.477405</td>\n",
-       "      <td>224.158806</td>\n",
-       "      <td>239.154790</td>\n",
+       "      <td>337.222705</td>\n",
+       "      <td>236.111076</td>\n",
+       "      <td>258.045097</td>\n",
+       "      <td>167.009500</td>\n",
+       "      <td>264.609213</td>\n",
+       "      <td>167.154231</td>\n",
+       "      <td>210.604750</td>\n",
+       "      <td>260.979533</td>\n",
+       "      <td>224.932744</td>\n",
+       "      <td>251.462142</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
-       "<p>5 rows × 37 columns</p>\n",
+       "<p>5 rows × 36 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
-       "            id                                                kps  gt  \\\n",
-       "0  12002202098  [536.8321981494795, 175.195561665862, 275.1838...   1   \n",
-       "1  11004300163  [127.29942679103571, 213.30461544594243, 120.0...   1   \n",
-       "2  18100208242  [342.73580897101715, 75.17388381608505, 347.63...   0   \n",
-       "3  18100204340  [335.26241877568896, 161.52584197965697, 340.3...   0   \n",
-       "4  12100104261  [255.48815989533517, 62.44247796682604, 256.76...   0   \n",
+       "            id  gt      Nose_X      Nose_Y  Left_Eye_X  Left_Eye_Y  \\\n",
+       "0  18100306191   0  333.109946   76.161688  338.565022   71.526141   \n",
+       "1  12100004003   1  373.043835  207.934236  378.278397  205.678759   \n",
+       "2  17100400995   0  289.116021  218.502992  294.331203  212.576996   \n",
+       "3  18100102279   0  320.897998   71.873468  325.167727   67.468033   \n",
+       "4  12100500969   1  486.122761  218.363896  495.503172  225.783665   \n",
        "\n",
-       "       Nose_X      Nose_Y  Left_Eye_X  Left_Eye_Y  Right_Eye_X  Right_Eye_Y  \\\n",
-       "0  536.832198  175.195562  275.183835  299.200492   321.438219    53.586762   \n",
-       "1  127.299427  213.304615  120.006179  213.098156   119.749502   220.877945   \n",
-       "2  342.735809   75.173884  347.639763   69.066162   337.646757    69.463328   \n",
-       "3  335.262419  161.525842  340.358734  155.666068   329.570863   154.843509   \n",
-       "4  255.488160   62.442478  256.765451   58.603055   251.489867    58.323107   \n",
+       "   Right_Eye_X  Right_Eye_Y  Left_Ear_X  Left_Ear_Y  ...  Right_Hip_X  \\\n",
+       "0   328.198963    72.194832  345.656490   77.592943  ...   313.925120   \n",
+       "1   373.341256   206.135385  380.165081  206.596348  ...   326.157557   \n",
+       "2   284.066039   212.259060  301.216267  211.233983  ...   276.756049   \n",
+       "3   317.188621    67.689969  329.814255   69.942939  ...   297.857163   \n",
+       "4   493.671955   223.923930  495.000279  250.292959  ...   337.222705   \n",
        "\n",
-       "   Left_Ear_X  ...  Right_Hip_X  Right_Hip_Y  Left_Knee_X  Left_Knee_Y  \\\n",
-       "0  438.831630  ...   355.320493   352.771307   282.603256   245.372110   \n",
-       "1  123.240242  ...   282.739062   217.173672   331.887746   122.399542   \n",
-       "2  354.332650  ...   327.693125   175.678139   373.687116   236.403840   \n",
-       "3  347.034712  ...   316.727216   218.696415   375.741803   250.993843   \n",
-       "4  255.327531  ...   235.763698   136.902009   277.832912   177.679435   \n",
+       "   Right_Hip_Y  Left_Knee_X  Left_Knee_Y  Right_Knee_X  Right_Knee_Y  \\\n",
+       "0   186.053571   335.013894   253.606162    309.011228    249.226721   \n",
+       "1   227.332505   351.341468   228.657224    328.581103    226.218648   \n",
+       "2   255.008508   345.230291   273.285718    237.498075    272.014232   \n",
+       "3   154.614716   329.598707   197.955873    299.710591    203.663761   \n",
+       "4   236.111076   258.045097   167.009500    264.609213    167.154231   \n",
        "\n",
-       "   Right_Knee_X  Right_Knee_Y  Left_Ankle_X  Left_Ankle_Y  Right_Ankle_X  \\\n",
-       "0    -71.727270    148.854694    377.204408    118.812093     368.630415   \n",
-       "1    369.934428    153.331971    407.764187     54.115847     373.738996   \n",
-       "2    330.044019    238.719585    383.867725    289.895923     335.013380   \n",
-       "3    285.306140    252.504808    384.364024    298.382275     275.523553   \n",
-       "4    229.566259    191.052507    284.397434    213.477405     224.158806   \n",
+       "   Left_Ankle_X  Left_Ankle_Y  Right_Ankle_X  Right_Ankle_Y  \n",
+       "0    333.654654    311.513965     311.760718     294.100708  \n",
+       "1    340.983916    240.702033     327.240044     241.339998  \n",
+       "2    349.413545    315.731031     237.181977     317.784665  \n",
+       "3    327.663990    231.684086     298.525798     251.789836  \n",
+       "4    210.604750    260.979533     224.932744     251.462142  \n",
        "\n",
-       "   Right_Ankle_Y  \n",
-       "0      32.683708  \n",
-       "1     228.353284  \n",
-       "2     292.018822  \n",
-       "3     298.044853  \n",
-       "4     239.154790  \n",
-       "\n",
-       "[5 rows x 37 columns]"
+       "[5 rows x 36 columns]"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -400,7 +420,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -417,7 +437,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -430,10 +450,10 @@
     {
      "data": {
       "text/plain": [
-       "0.9116394380522536"
+       "0.9092873943169538"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -465,7 +485,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -506,16 +526,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Training Pipelines:  {'annotation_method': {'method': <AnnotationMethod.MASTER_FILE: 1>, 'args': {'master_file': 'data/master_annotation_data.json'}}, 'training_func': <function train_model_torch at 0x28a56ab90>, 'orig_training_file': 'data/training_data.json'} \n",
+      "Training Pipelines:  {'annotation_method': {'method': <AnnotationMethod.MASTER_FILE: 1>, 'args': {'master_file': 'data/master_annotation_data.json'}}, 'training_func': <function train_model_torch at 0x7feaf51f5550>, 'orig_training_file': 'data/training_data.json'} \n",
       "\n",
-      "Evaluation Pipelines:  {'inference_func': <function get_accuracy_torch at 0x28a56a950>, 'golden_testing_dataset': 'data/golden_testing_data.json'}\n"
+      "Evaluation Pipelines:  {'inference_func': <function get_accuracy_torch at 0x7feaf51f5310>, 'golden_testing_dataset': 'data/golden_testing_data.json'}\n"
      ]
     }
    ],
@@ -546,7 +566,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -595,17 +615,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "50  edge cases identified out of  13424  total samples\n",
-      "101  edge cases identified out of  15792  total samples\n",
-      "150  edge cases identified out of  24128  total samples\n",
-      "200  edge cases identified out of  26608  total samples\n",
+      "51  edge cases identified out of  11840  total samples\n",
+      "100  edge cases identified out of  13360  total samples\n",
+      "150  edge cases identified out of  14864  total samples\n",
+      "201  edge cases identified out of  21632  total samples\n",
       "\n",
       "Kicking off re-training\n",
       "Creating retraining dataset: uptrain_smart_data/1/training_dataset.json  by merging  data/training_data.json  and collected edge cases.\n",
@@ -617,8 +637,8 @@
       "Evaluating model: version_1  on  15731  data-points\n",
       "---------------------------------------------\n",
       "---------------------------------------------\n",
-      "Old model accuracy:  0.9116394380522536\n",
-      "Retrained model accuracy (ie 201 smartly collected data-points added):  0.9863962875850232\n",
+      "Old model accuracy:  0.9092873943169538\n",
+      "Retrained model accuracy (ie 201 smartly collected data-points added):  0.9952323437797979\n",
       "---------------------------------------------\n",
       "---------------------------------------------\n"
      ]
@@ -726,7 +746,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.8"
+   "version": "3.8.16"
   },
   "vscode": {
    "interpreter": {
