--- a/examples/1_orientation_classification/deepdive_examples/uptrain_check_all.ipynb
+++ b/examples/1_orientation_classification/deepdive_examples/uptrain_check_all.ipynb
@@ -41,6 +41,22 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Install the required packages for this example"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "!pip install torch imgaug"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {},
@@ -548,7 +564,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.4"
+   "version": "3.8.16"
   },
   "vscode": {
    "interpreter": {
