--- a/examples/1_orientation_classification/deepdive_examples/uptrain_data_drift_custom_measures.ipynb
+++ b/examples/1_orientation_classification/deepdive_examples/uptrain_data_drift_custom_measures.ipynb
@@ -4,7 +4,18 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Measuring Data Drift on a Binary Classification Task"
+    "<h1 align=\"center\">\n",
+    "  <a href=\"https://uptrain.ai\">\n",
+    "    <img width=\"300\" src=\"https://user-images.githubusercontent.com/108270398/214240695-4f958b76-c993-4ddd-8de6-8668f4d0da84.png\" alt=\"uptrain\">\n",
+    "  </a>\n",
+    "</h1>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<h1 style=\"text-align: center;\"> Measuring Data Drift on a Binary Classification Task </h1>"
    ]
   },
   {
@@ -38,6 +49,22 @@
    "metadata": {},
    "source": [
     "In this notebook, we will see how we can use UpTrain package to identify data drift and identify out of distribution cases on real-world data."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Install the required packages for this example"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "!pip install torch imgaug"
    ]
   },
   {
@@ -544,7 +571,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.4"
+   "version": "3.8.16"
   },
   "vscode": {
    "interpreter": {
