--- a/examples/1_orientation_classification/deepdive_examples/uptrain_data_integrity.ipynb
+++ b/examples/1_orientation_classification/deepdive_examples/uptrain_data_integrity.ipynb
@@ -4,7 +4,41 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "<h1 align=\"center\">\n",
+    "  <a href=\"https://uptrain.ai\">\n",
+    "    <img width=\"300\" src=\"https://user-images.githubusercontent.com/108270398/214240695-4f958b76-c993-4ddd-8de6-8668f4d0da84.png\" alt=\"uptrain\">\n",
+    "  </a>\n",
+    "</h1>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<h1 style=\"text-align: center;\">Integrity Checks on Production Data</h1>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "In this notebook, we will see how we can use UpTrain package to check for data integrity, both on input data as well as custom metrics"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Install the required packages for this example"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "!pip install torch imgaug"
    ]
   },
   {
@@ -251,7 +285,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.4"
+   "version": "3.8.16"
   },
   "vscode": {
    "interpreter": {
