--- a/examples/1_orientation_classification/deepdive_examples/uptrain_edge_cases_sklearn.ipynb
+++ b/examples/1_orientation_classification/deepdive_examples/uptrain_edge_cases_sklearn.ipynb
@@ -38,6 +38,22 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Install the required packages for this example"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "!pip install imgaug"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {},
@@ -348,7 +364,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.4"
+   "version": "3.8.16"
   }
  },
  "nbformat": 4,
