--- a/examples/1_orientation_classification/deepdive_examples/uptrain_edge_cases_tensorflow.ipynb
+++ b/examples/1_orientation_classification/deepdive_examples/uptrain_edge_cases_tensorflow.ipynb
@@ -4,6 +4,17 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "<h1 align=\"center\">\n",
+    "  <a href=\"https://uptrain.ai\">\n",
+    "    <img width=\"300\" src=\"https://user-images.githubusercontent.com/108270398/214240695-4f958b76-c993-4ddd-8de6-8668f4d0da84.png\" alt=\"uptrain\">\n",
+    "  </a>\n",
+    "</h1>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "## Finding edge cases for automated retraining on a Binary Classification Task [Tensorflow]"
    ]
   },
@@ -35,6 +46,29 @@
    "metadata": {},
    "source": [
     "After training our model, we will use the UpTrain Framework to identify edge cases during testing and retrain the binary classification model to improve its accuracy."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Install the required packages for this example"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "!pip install imgaug"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Note: Also requires tensorflow to be installed. We ran the following code successfully with tensorflow version 2.11.0."
    ]
   },
   {
@@ -104,13 +138,6 @@
    "metadata": {},
    "source": [
     "### Training using Deep Neural Network (with Tensorflow)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Note: Requires tensorflow to be installed. We ran the following code successfully with tensorflow version 2.11.0."
    ]
   },
   {
@@ -628,7 +655,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.4"
+   "version": "3.8.16"
   }
  },
  "nbformat": 4,
