--- a/examples/1_orientation_classification/deepdive_examples/uptrain_edge_cases_torch.ipynb
+++ b/examples/1_orientation_classification/deepdive_examples/uptrain_edge_cases_torch.ipynb
@@ -4,6 +4,17 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "<h1 align=\"center\">\n",
+    "  <a href=\"https://uptrain.ai\">\n",
+    "    <img width=\"300\" src=\"https://user-images.githubusercontent.com/108270398/214240695-4f958b76-c993-4ddd-8de6-8668f4d0da84.png\" alt=\"uptrain\">\n",
+    "  </a>\n",
+    "</h1>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "## Finding edge cases for automated retraining on a Binary Classification Task [PyTorch]"
    ]
   },
@@ -38,8 +49,24 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Install required packages for this example"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 1,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "!pip install torch imgaug"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -65,7 +92,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -107,18 +134,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Training on:  data/training_data.json  which has  1000  data-points\n",
-      "Trained model exists. Skipping training again.\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import torch\n",
     "from helper_files import get_accuracy_torch, train_model_torch, BinaryClassification\n",
@@ -137,14 +155,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Evaluating on  15731  data-points\n"
+      "Evaluating model: version_0  on  15731  data-points\n"
      ]
     },
     {
@@ -153,7 +171,7 @@
        "0.9092873943169538"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -174,7 +192,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -234,14 +252,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Deleting the folder:  uptrain_smart_data_edge_cases_torch\n"
+      "Deleting the folder:  uptrain_logs\n"
      ]
     }
    ],
@@ -258,7 +276,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 8,
    "metadata": {
     "tags": []
    },
@@ -267,25 +285,24 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "51  data-points collected out of  944  inferred samples\n",
-      "101  data-points collected out of  1824  inferred samples\n",
-      "152  data-points collected out of  2800  inferred samples\n",
-      "201  data-points collected out of  3648  inferred samples\n",
-      "250  data-points collected out of  4560  inferred samples\n",
+      "51  edge cases identified out of  944  total samples\n",
+      "101  edge cases identified out of  1824  total samples\n",
+      "152  edge cases identified out of  2800  total samples\n",
+      "201  edge cases identified out of  3648  total samples\n",
+      "250  edge cases identified out of  4560  total samples\n",
+      "\n",
       "Kicking off re-training\n",
-      "251 data-points selected out of 4592\n",
-      "Training on:  uptrain_smart_data_edge_cases_torch/1/training_dataset.json  which has  2255  data-points\n",
-      "Trained model exists. Skipping training again.\n",
+      "Creating retraining dataset: uptrain_smart_data_edge_cases_torch/1/training_dataset.json  by merging  data/training_data.json  and collected edge cases.\n",
+      "\n",
       "Model retraining done...\n",
+      "\n",
       "Generating comparison report...\n",
-      "Training on:  data/training_data.json  which has  1000  data-points\n",
-      "Trained model exists. Skipping training again.\n",
-      "Evaluating on  15731  data-points\n",
-      "Evaluating on  15731  data-points\n",
+      "Evaluating model: version_0  on  15731  data-points\n",
+      "Evaluating model: version_1  on  15731  data-points\n",
       "---------------------------------------------\n",
       "---------------------------------------------\n",
       "Old model accuracy:  0.9092873943169538\n",
-      "Retrained model accuracy (ie 251 smartly collected data-points added):  0.9855063250905854\n",
+      "Retrained model accuracy (ie 251 smartly collected data-points added):  0.9877312313266798\n",
       "---------------------------------------------\n",
       "---------------------------------------------\n"
      ]
@@ -373,7 +390,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.4"
+   "version": "3.8.16"
   }
  },
  "nbformat": 4,
